# GarticPhoneBot

./: .gitignore  Bot.py  DraeSelenium.py  ImageProcessor.py  LICENSE  README.md  SVGParser.py  main.py  mypy.ini  pylint.toml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: black.yml  mypy.yml  pylint.yml  ruff.yml
app/: bot.py
app/core/: api.py  image.py  svg.py
